add feeds view to default layout

--- a/internal/config/default.config.toml
+++ b/internal/config/default.config.toml
@@ -3,6 +3,7 @@ update_interval = 250
 layout = [
     ["weather", "weather"],
     ["weather", "weather"],
+    ["feeds", "feeds"],
     ["latency", "status"]
 ]
 
