--- a/internal/config/default.config.toml
+++ b/internal/config/default.config.toml
@@ -22,6 +22,6 @@ owm_unit = "metric"
 
 [views.feeds]
 update_interval = 60000 # 1 minutes
-max_items = 0
+max_items = 0 # 0 means auto
 show_feed_title = true
 show_published_time = true
