--- a/internal/config/default.config.toml
+++ b/internal/config/default.config.toml
@@ -1,8 +1,17 @@
-update_interval = 250
+update_interval = 250 # 250 ms
+page_interval = 15000 # 15 seconds
 
+[[pages]]
 layout = [
     ["weather", "weather"],
     ["weather", "weather"],
+    ["feeds", "feeds"],
+    ["latency", "status"]
+]
+
+[[pages]]
+layout = [
+    ["feeds", "feeds"],
     ["feeds", "feeds"],
     ["latency", "status"]
 ]
