update readme and add more config details

--- a/internal/config/default.config.toml
+++ b/internal/config/default.config.toml
@@ -1,5 +1,5 @@
 update_interval = 250 # 250 ms
-page_interval = 15000 # 15 seconds
+page_interval = 30000 # 30 seconds
 
 [[pages]]
 layout = [
@@ -34,3 +34,9 @@ update_interval = 60000 # 1 minutes
 max_items = 0 # 0 means auto
 show_feed_title = true
 show_published_time = true
+
+[logging]
+filename = "blimp.log"
+max_size = 1 # in MB
+max_age = 7 # in days
+max_backups = 5 # // note: old ones will still be deleted after max_age
