--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,9 @@ jobs:
           fetch-depth: 0
       - name: Set up Go
         uses: actions/setup-go@v4
+        with:
+          go-version: ">=1.21.0"
+          check-latest: true
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
